getFirst function is replaced with get(0) in ParticipantControllerRaceConditionTest Class.